--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fullcalendar/interaction": "^6.1.6",
     "@fullcalendar/react": "^6.1.6",
     "@reduxjs/toolkit": "^1.9.5",
+    "@types/styled-components": "^5.1.26",
     "axios": "^1.4.0",
     "firebase": "^9.21.0",
     "framer-motion": "^10.12.7",
@@ -29,7 +30,8 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.0",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "styled-components": "^5.3.10"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
