--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/styled-components": "^5.1.26",
     "axios": "^1.4.0",
     "firebase": "^9.21.0",
+    "formik": "^2.2.9",
     "framer-motion": "^10.12.7",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
@@ -31,7 +32,8 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.0",
     "sort-by": "^1.2.0",
-    "styled-components": "^5.3.10"
+    "styled-components": "^5.3.10",
+    "yup": "^1.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
